fix to z-index not allowing clicking buttons

--- a/src/assets/styles/components/AboutMeSection.scss
+++ b/src/assets/styles/components/AboutMeSection.scss
@@ -9,7 +9,6 @@
   grid-template-rows: 1fr;
   gap: 4.8rem;
   align-items: center;
-  /* border: 4px solid red; */
 }
 
 .about-me-container {
@@ -46,7 +45,6 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 4.7rem 4.4rem;
-  /* border: 4px solid red; */
 }
 
 .hobbies-container h3 {
@@ -93,6 +91,7 @@
     height: auto;
     gap: 0.8rem 0rem;
   }
+
   .about-me-container {
     height: calc(100vh - 8.2rem);
     display: flex;
@@ -101,34 +100,37 @@
     grid-column: 1/2;
     grid-row: 1/2;
   }
+
   .about-me-container h3 {
     text-align: center;
     margin-top: 6.4rem;
   }
+
   .hobbies-container {
-    /* height: calc(100vh - 8.2rem);
-    display: flex;
-    flex-direction: column;
-    justify-content: center; */
     padding: 3.2rem 0;
     grid-column: 1/2;
     grid-row: 2/3;
   }
+
   .hobbies-table {
     gap: 8rem 3.2rem;
     grid-template-columns: repeat(2, 1fr);
   }
+
   .hobbie-icon-container {
     width: 100%;
     height: auto;
   }
+
   .hobbie-icon-container img {
     width: 4.6rem;
     height: 4.6rem;
   }
+
   .hobbies-container h3 {
     text-align: center;
   }
+
   .hobbies-container h4 {
     font-size: 1.7rem;
   }
