--- a/src/assets/styles/components/ProjectSection.scss
+++ b/src/assets/styles/components/ProjectSection.scss
@@ -9,7 +9,6 @@
   grid-template-rows: 1fr;
   gap: 4.8rem;
   align-items: center;
-  /* border: 4px solid red; */
 }
 
 .information-container {
@@ -39,7 +38,6 @@
 
 .img-container {
   grid-column: 6/13;
-  /* aspect-ratio: 16/9; */
 }
 
 .img-container img {
@@ -50,7 +48,6 @@
 
 .position-relative {
   position: relative;
-  z-index: -1;
 }
 
 @media only screen and (max-width: 900px) {
@@ -60,19 +57,21 @@
     gap: 1.6rem;
     padding: 6.4rem 0rem;
   }
+
   .information-container {
     grid-column: 1/2;
     grid-row: 1/2;
     display: flex;
   }
+
   .information-container h3 {
     margin-bottom: 3.2rem;
   }
+
   .img-container {
     grid-column: 1/2;
     grid-row: 2/3;
     height: 90%;
     margin-bottom: 4.8rem;
-    /* border: 4px solid red; */
   }
 }
